--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "iot node-python-mqtt app",
   "main": "index.js",
   "dependencies": {
+    "formidable": "^1.0.17",
     "mongodb": "^2.1.18",
     "mqtt": "^1.10.0"
   },
